YARN-5808. Add gc log options to the yarn daemon script when starting services-api. Contributed by Billie Rinaldi